<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_page_title">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_streamer_app_name">Spotify Streamer</string>
    <string name="library_app_name">Library App</string>
    <string name="scores_app_name">Scores App</string>
    <string name="build_bigger_app_name">Build it Bigger</string>
    <string name="xyz_reader_app_name">XYZ Reader</string>
    <string name="capstone_app_name">Capstone: My Own App</string>

    <string name="spotify_toast">This button launches my spotify streaming app!</string>
    <string name="library_toast">This button launches my library app!</string>
    <string name="scores_toast">This button lanches my scores app!</string>
    <string name="build_bigger_toast">This button launches my Build it Bigger app!</string>
    <string name="xyz_reader_toast">This button launches my XYZ reader app!</string>
    <string name="capstone_toast">This button launches my capstone app!</string>
</resources>
